Fixed up bits of look and feel on tables. TODO: cell text overflows into neighboring cells.

--- a/codalab/apps/web/static/foundation/sass/_settings.scss
+++ b/codalab/apps/web/static/foundation/sass/_settings.scss
@@ -50,6 +50,10 @@ $button-font-color: $foreground;
 	padding: 2px;
 }
 
+td > a > i {
+	color: $background;
+}
+
 a > i {
 	height: 100%;
 	color: $foreground;
